Ensure images in gallery don't overflow container

--- a/themes/highheath/assets/css/style.css
+++ b/themes/highheath/assets/css/style.css
@@ -51,7 +51,8 @@ nav .border{
 
 #gallery .gallery-container picture {
 	flex: 1 0 auto;
-	margin: 5px;
+	padding: 5px;
+	max-width: 100%;
 }
 
 #gallery .gallery-container picture img {
